...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                />

            <TextView
                android:id="@+id/mnemonic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges_half"
                android:lineSpacingExtra="4dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_default"
                android:fontFamily="@font/ubuntu_mono"
                app:layout_constraintEnd_toStartOf="@id/action_copy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep1"
                tools:text="vague soft expose improve gaze kitten pass point select access battle wish"
                />

            <TextView
                android:id="@+id/action_copy"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_copy"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/sep2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mnemonic"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <Switch
                    android:id="@+id/switch_save_mnemonic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_edges"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row_save_mnemonic"
                />

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:enabled="false"
                android:text="@string/btn_launch_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sep4"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
...
