...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_generate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="@string/btn_generate_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Wallet.Button"
                />

...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_seed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:textSize="@dimen/text_size_default"
                    tools:text="sun table orange mother"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_activate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges"
                android:layout_marginTop="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges"
                android:text="@string/btn_activate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_seed"
                />

            <Space
...
