...
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent"

            app:layout_constraintBottom_toTopOf="@id/navigation_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <network.minter.bipwallet.internal.views.error.StaticErrorPopupView
            android:id="@+id/error_view"
...
